# cloak-protocol

./: .env  .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  LOVABLE_SETUP.md  README.md  README_IMPROVED.md  SUBMISSION_CHECKLIST.md  components.json  docker-compose.yml  eslint.config.js  generate_diagrams.js  generate_diagrams.py  generate_technical_diagrams.py  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  BACKEND_README.md  Cargo.toml  Dockerfile
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: bridge.rs  mod.rs  server.rs
backend/src/deploy/: mod.rs
backend/src/node/: mod.rs
backend/src/psy_client/: mod.rs
backend/src/state/: mod.rs
backend/tests/: integration_tests.rs
docs/: API.md  DEMO_SCRIPT.md  INTEGRATION.md  TECHNICAL.md
frontend/: .env.example  .env.production  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LOVABLE_SETUP.md  index.html  nginx.conf  package-lock.json  package.json  package.json.improved  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/diagnostics/: env.txt
frontend/diagnostics/scans/: createRoot.txt  getElementById.txt  imports.txt  process-env.txt  window-document.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  setup.ts
src/components/: CTASection.tsx  Header.tsx  HeroSection.tsx
src/hooks/: useMockTrading.ts
src/lib/: mockApi.ts
src/pages/: AppRoutes.tsx  Index.tsx
supabase/: config.toml
(+63 files in other folders)
